--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     margin: 100px 0 100px 0;
 }
 .txt-type {
-    color: black;
+    color: white;
 }
 .home-container{
     background-color: Orange;
